@@ -22,10 +22,16 @@
 #ifndef PHP_ZLIB_H
 #define PHP_ZLIB_H
 
-#if HAVE_ZLIB
+#include <zlib.h>
+
 
 typedef struct {
 	int gzgetss_state;
+
+	/* variables for transparent gzip encoding */
+    int compression_coding;
+    z_stream stream;
+    uLong crc;
 } php_zlib_globals;
 
 extern zend_module_entry php_zlib_module_entry;
@@ -52,20 +58,24 @@ PHP_FUNCTION(gzcompress);
 PHP_FUNCTION(gzuncompress);
 PHP_FUNCTION(gzdeflate);
 PHP_FUNCTION(gzinflate);
+PHP_FUNCTION(gzencode);
+PHP_FUNCTION(ob_gzhandler);
 
 #ifdef ZTS
 #define ZLIBLS_D php_zlib_globals *zlib_globals
+#define ZLIBLS_DC , ZLIBLS_D
+#define ZLIBLS_C zlib_globals
+#define ZLIBLS_CC , ZLIBLS_C
 #define ZLIBG(v) (zlib_globals->v)
 #define ZLIBLS_FETCH() php_zlib_globals *zlib_globals = ts_resource(zlib_globals_id)
 #else
 #define ZLIBLS_D
+#define ZLIBLS_DC
+#define ZLIBLS_C
+#define ZLIBLS_CC
 #define ZLIBG(v) (zlib_globals.v)
 #define ZLIBLS_FETCH()
 #endif
-
-#else
-#define zlib_module_ptr NULL
-#endif /* HAVE_ZLIB */
 
 #define phpext_zlib_ptr zlib_module_ptr
 
