@@ -271,6 +271,7 @@ SAPI_API void sapi_activate(SLS_D)
 	SG(request_info).post_data = NULL;
 	SG(request_info).current_user = NULL;
 	SG(request_info).current_user_length = 0;
+	SG(request_info).no_headers = 0;
 
 	/* It's possible to override this general case in the activate() callback, if
 	 * necessary.
@@ -363,7 +364,7 @@ SAPI_API int sapi_add_header_ex(char *header_line, uint header_line_len, zend_bo
 	char *colon_offset;
 	SLS_FETCH();
 
-	if (SG(headers_sent)) {
+	if (SG(headers_sent) && !SG(request_info).no_headers) {
 		char *output_start_filename = php_get_output_start_filename();
 		int output_start_lineno = php_get_output_start_lineno();
 
@@ -457,7 +458,7 @@ SAPI_API int sapi_send_headers()
 	int ret = FAILURE;
 	SLS_FETCH();
 
-	if (SG(headers_sent)) {
+	if (SG(headers_sent) || SG(request_info).no_headers) {
 		return SUCCESS;
 	}
 
