@@ -65,6 +65,9 @@ struct _php_core_globals {
 	zend_bool safe_mode;
 	zend_bool sql_safe_mode;
 	zend_bool enable_dl;
+
+	char *output_handler;
+
 	char *safe_mode_exec_dir;
 
 	long memory_limit;
