@@ -92,8 +92,8 @@ int apache_php_module_main(request_rec *r, int display_source_mode CLS_DC ELS_DC
         if (setjmp(EG(bailout))!=0) {
 		return OK;
 	}
-	php_header();			/* Make sure headers have been sent */
 	php_end_ob_buffers(1);
+	php_header();			/* Make sure headers have been sent */
 	return (OK);
 }
 
